tests2/tests/snapshots/test__typescript__ts-export-deserialize.snap
---
source: tests2/tests/typescript.rs
expression: "Typescript::default().with_serde(mode).bigint(BigIntExportBehavior::Number).export(&crate::types().0).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.



export type BasicEnum = "A" | "B";

export type EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } };

export type EnumReferenceRecordKey = { 
		a: Partial<{ [key in BasicEnum]: number }>,
	};

export type ExtraBracketsInTupleVariant = { A: string };

export type ExtraBracketsInUnnamedStruct = string;

export type FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };

export type FlattenEnumStruct = (FlattenEnum) & { 
		outer: string,
	};

export type FlattenOnNestedEnum = (NestedEnum) & { 
		id: string,
	};

export type GenericStruct<T> = { 
		arg: T,
	};

export type HasGenericAlias = { [key in number]: string };

export type InlineEnumField = { A: PlaceholderInnerField };

export type InlineOptionalType = { 
		optional_field: PlaceholderInnerField | null,
	};

export type InlineStruct = { 
		ref_struct: SimpleStruct,
		val: number,
	};

export type InlineTuple = { 
		demo: [string, boolean],
	};

export type InlineTuple2 = { 
		demo: [InlineTuple, boolean],
	};

export type InlinerStruct = { 
		inline_this: InlineStruct,
		dont_inline_this: RefStruct,
	};

export type Issue281 = { 
		default_unity_arguments: string[],
	};

/**
 * https://github.com/specta-rs/specta/issues/374
 */
export type Issue374 = { 
		foo: boolean,
		bar: boolean,
	};

export type KebabCase = { 
		"test-ing": string,
	};

export type MyEmptyInput = Record<string, never>;

export type MyEnum = { A: string } | { B: number };

export type NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };

export type OverridenStruct = { 
		overriden_field: string,
	};

export type PlaceholderInnerField = { 
		a: string,
	};

export type Primitives = { 
		"1": number,
		"2": number,
		"3": number,
		"4": number,
		"5": number,
		"6": number,
		"7": number,
		"8": number,
		"9": number,
		a: number,
		b: number,
		c: number,
		d: number,
		e: number,
		f: boolean,
		"10": string,
		"11": { 
	start: number,
	end: number,
},
		"12": { 
	start: number,
	end: number,
},
		"13": null,
		"14": [string, number],
		"15": [string, number, boolean],
		"16": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
		"17": string,
		"18": string,
		"19": string,
		"1a": string,
		"1b": string,
		"1c": string,
		"1d": string,
		"1e": string,
		"1f": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
		"20": { 
	secs: number,
	nanos: number,
},
		"21": string,
		"22": boolean,
		"23": number,
		"24": number[],
		"25": number[],
		"26": number[],
		"27": MyEnum[],
		"28": MyEnum[],
		"29": MyEnum[],
		"2a": number[],
		"2b": number[],
		"2c": number | null,
		"2d": null | null,
		"2e": Unit1,
		"2f": Unit2,
		"30": Unit3,
		"31": Unit4,
		"32": Unit5,
		"33": Unit6,
		"34": Unit7,
		"35": SimpleStruct,
		"36": TupleStruct1,
		"37": TupleStruct3,
		"38": TestEnum,
		"39": RefStruct,
		"3a": InlinerStruct,
		"3b": GenericStruct<number>,
		"3c": GenericStruct<string>,
		"3d": FlattenEnumStruct,
		"3e": OverridenStruct,
		"3f": HasGenericAlias,
		"40": SkipVariant,
		"41": SkipVariant2,
		"42": SkipVariant3,
		"43": EnumMacroAttributes,
		"44": Recursive,
		"45": InlineEnumField,
		"46": InlineOptionalType,
		"47": Rename,
		"48": TransparentType,
		"49": TransparentType2,
		"4a": TransparentTypeWithOverride,
		"4b": (number | null)[],
		"4c": Partial<{ [key in BasicEnum]: null }>,
		"4d": number | null,
		"4e": PlaceholderInnerField[],
		"4f": Partial<{ [key in BasicEnum]: number }>,
		"50": EnumReferenceRecordKey,
		"51": FlattenOnNestedEnum,
		"52": null,
		"53": null,
		"54": never,
		"55": MyEmptyInput,
		"56": string,
		"57": [string],
		"58": ExtraBracketsInTupleVariant,
		"59": ExtraBracketsInUnnamedStruct,
		"5a": MyEnum[],
		"5b": InlineTuple,
		"5c": InlineTuple2,
		"5d": string,
		"5e": string,
		"5f": SkippedFieldWithinVariant,
		"60": KebabCase,
		"61": string[],
		"62": Issue281,
		"63": RenameWithWeirdCharsField,
		"64": RenameWithWeirdCharsVariant,
		"65": Issue374,
		"66": Type,
	};

export type Recursive = { 
		a: number,
		children: Recursive[],
	};

export type RefStruct = TestEnum;

export type Rename = "OneWord" | "Two words";

export type RenameWithWeirdCharsField = { 
		odata_context: string,
	};

export type RenameWithWeirdCharsVariant = { "@odata.context": string };

export type SimpleStruct = { 
		a: number,
		b: string,
		c: [number, string, number],
		d: string[],
		e: string | null,
	};

export type SkipVariant = { A: string };

export type SkipVariant2 = { tag: "A"; data: string };

export type SkipVariant3 = { A: { a: string } };

export type SkippedFieldWithinVariant = { type: "A"; data: null } | { type: "B"; data: string };

export type TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };

export type TransparentType = TransparentTypeInner;

export type TransparentType2 = null;

export type TransparentTypeInner = { 
		inner: string,
	};

export type TransparentTypeWithOverride = string;

export type TupleStruct1 = number;

export type TupleStruct3 = [number, boolean, string];

export type Type = never;

export type Unit1 = null;

export type Unit2 = Record<string, never>;

export type Unit3 = [];

export type Unit4 = null;

export type Unit5 = "A";

export type Unit6 = { A: [] };

export type Unit7 = { A: Record<string, never> };
