tests2/tests/snapshots/test__typescript__ts-export-to-files-deserialize.snap
---
source: tests2/tests/typescript.rs
expression: fs_to_string(&path).unwrap()
---
test/
  types/
    type_type.ts (103 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    
    
    export type Type = never;
    ════════════════════════════════════════

  types.ts (3550 bytes)
  ────────────────────────────────────────
  // This file has been generated by Specta. Do not edit this file manually.
  
  import type { BasicEnum as test_types, FlattenEnum as test_types, InlineStruct as test_types, InlineTuple as test_types, NestedEnum as test_types, PlaceholderInnerField as test_types, Recursive as test_types, RefStruct as test_types, SimpleStruct as test_types, TestEnum as test_types, TransparentTypeInner as test_types } from "./";
  
  export type BasicEnum = "A" | "B";
  
  export type EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } };
  
  export type EnumReferenceRecordKey = { 
  		a: Partial<{ [key in test_types_BasicEnum]: number }>,
  	};
  
  export type ExtraBracketsInTupleVariant = { A: string };
  
  export type ExtraBracketsInUnnamedStruct = string;
  
  export type FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };
  
  export type FlattenEnumStruct = (test_types_FlattenEnum) & { 
  		outer: string,
  	};
  
  export type FlattenOnNestedEnum = (test_types_NestedEnum) & { 
  		id: string,
  	};
  
  export type GenericStruct<T> = { 
  		arg: T,
  	};
  
  export type HasGenericAlias = { [key in number]: string };
  
  export type InlineEnumField = { A: test_types_PlaceholderInnerField };
  
  export type InlineOptionalType = { 
  		optional_field: test_types_PlaceholderInnerField | null,
  	};
  
  export type InlineStruct = { 
  		ref_struct: test_types_SimpleStruct,
  		val: number,
  	};
  
  export type InlineTuple = { 
  		demo: [string, boolean],
  	};
  
  export type InlineTuple2 = { 
  		demo: [test_types_InlineTuple, boolean],
  	};
  
  export type InlinerStruct = { 
  		inline_this: test_types_InlineStruct,
  		dont_inline_this: test_types_RefStruct,
  	};
  
  export type Issue281 = { 
  		default_unity_arguments: string[],
  	};
  
  /**
   * https://github.com/specta-rs/specta/issues/374
   */
  export type Issue374 = { 
  		foo: boolean,
  		bar: boolean,
  	};
  
  export type KebabCase = { 
  		"test-ing": string,
  	};
  
  export type MyEmptyInput = Record<string, never>;
  
  export type MyEnum = { A: string } | { B: number };
  
  export type NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };
  
  export type OverridenStruct = { 
  		overriden_field: string,
  	};
  
  export type PlaceholderInnerField = { 
  		a: string,
  	};
  
  export type Recursive = { 
  		a: number,
  		children: test_types_Recursive[],
  	};
  
  export type RefStruct = test_types_TestEnum;
  
  export type Rename = "OneWord" | "Two words";
  
  export type RenameWithWeirdCharsField = { 
  		odata_context: string,
  	};
  
  export type RenameWithWeirdCharsVariant = { "@odata.context": string };
  
  export type SimpleStruct = { 
  		a: number,
  		b: string,
  		c: [number, string, number],
  		d: string[],
  		e: string | null,
  	};
  
  export type SkipVariant = { A: string };
  
  export type SkipVariant2 = { tag: "A"; data: string };
  
  export type SkipVariant3 = { A: { a: string } };
  
  export type SkippedFieldWithinVariant = { type: "A"; data: null } | { type: "B"; data: string };
  
  export type TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };
  
  export type TransparentType = test_types_TransparentTypeInner;
  
  export type TransparentType2 = null;
  
  export type TransparentTypeInner = { 
  		inner: string,
  	};
  
  export type TransparentTypeWithOverride = string;
  
  export type TupleStruct1 = number;
  
  export type TupleStruct3 = [number, boolean, string];
  
  export type Unit1 = null;
  
  export type Unit2 = Record<string, never>;
  
  export type Unit3 = [];
  
  export type Unit4 = null;
  
  export type Unit5 = "A";
  
  export type Unit6 = { A: [] };
  
  export type Unit7 = { A: Record<string, never> };
  ════════════════════════════════════════

virtual.ts (4391 bytes)
────────────────────────────────────────
// This file has been generated by Specta. Do not edit this file manually.

import type { BasicEnum as test_types, EnumMacroAttributes as test_types, EnumReferenceRecordKey as test_types, ExtraBracketsInTupleVariant as test_types, ExtraBracketsInUnnamedStruct as test_types, FlattenEnumStruct as test_types, FlattenOnNestedEnum as test_types, GenericStruct as test_types, HasGenericAlias as test_types, InlineEnumField as test_types, InlineOptionalType as test_types, InlineTuple as test_types, InlineTuple2 as test_types, InlinerStruct as test_types, Issue281 as test_types, Issue374 as test_types, KebabCase as test_types, MyEmptyInput as test_types, MyEnum as test_types, OverridenStruct as test_types, PlaceholderInnerField as test_types, Recursive as test_types, RefStruct as test_types, Rename as test_types, RenameWithWeirdCharsField as test_types, RenameWithWeirdCharsVariant as test_types, SimpleStruct as test_types, SkipVariant as test_types, SkipVariant2 as test_types, SkipVariant3 as test_types, SkippedFieldWithinVariant as test_types, TestEnum as test_types, TransparentType as test_types, TransparentType2 as test_types, TransparentTypeWithOverride as test_types, TupleStruct1 as test_types, TupleStruct3 as test_types, Unit1 as test_types, Unit2 as test_types, Unit3 as test_types, Unit4 as test_types, Unit5 as test_types, Unit6 as test_types, Unit7 as test_types } from "./";
import type { Type as test_types_type_type } from "./../";

export type Primitives = { 
		"1": number,
		"2": number,
		"3": number,
		"4": number,
		"5": number,
		"6": number,
		"7": number,
		"8": number,
		"9": number,
		a: number,
		b: number,
		c: number,
		d: number,
		e: number,
		f: boolean,
		"10": string,
		"11": { 
	start: number,
	end: number,
},
		"12": { 
	start: number,
	end: number,
},
		"13": null,
		"14": [string, number],
		"15": [string, number, boolean],
		"16": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
		"17": string,
		"18": string,
		"19": string,
		"1a": string,
		"1b": string,
		"1c": string,
		"1d": string,
		"1e": string,
		"1f": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
		"20": { 
	secs: number,
	nanos: number,
},
		"21": string,
		"22": boolean,
		"23": number,
		"24": number[],
		"25": number[],
		"26": number[],
		"27": test_types_MyEnum[],
		"28": test_types_MyEnum[],
		"29": test_types_MyEnum[],
		"2a": number[],
		"2b": number[],
		"2c": number | null,
		"2d": null | null,
		"2e": test_types_Unit1,
		"2f": test_types_Unit2,
		"30": test_types_Unit3,
		"31": test_types_Unit4,
		"32": test_types_Unit5,
		"33": test_types_Unit6,
		"34": test_types_Unit7,
		"35": test_types_SimpleStruct,
		"36": test_types_TupleStruct1,
		"37": test_types_TupleStruct3,
		"38": test_types_TestEnum,
		"39": test_types_RefStruct,
		"3a": test_types_InlinerStruct,
		"3b": test_types_GenericStruct<number>,
		"3c": test_types_GenericStruct<string>,
		"3d": test_types_FlattenEnumStruct,
		"3e": test_types_OverridenStruct,
		"3f": test_types_HasGenericAlias,
		"40": test_types_SkipVariant,
		"41": test_types_SkipVariant2,
		"42": test_types_SkipVariant3,
		"43": test_types_EnumMacroAttributes,
		"44": test_types_Recursive,
		"45": test_types_InlineEnumField,
		"46": test_types_InlineOptionalType,
		"47": test_types_Rename,
		"48": test_types_TransparentType,
		"49": test_types_TransparentType2,
		"4a": test_types_TransparentTypeWithOverride,
		"4b": (number | null)[],
		"4c": Partial<{ [key in test_types_BasicEnum]: null }>,
		"4d": number | null,
		"4e": test_types_PlaceholderInnerField[],
		"4f": Partial<{ [key in test_types_BasicEnum]: number }>,
		"50": test_types_EnumReferenceRecordKey,
		"51": test_types_FlattenOnNestedEnum,
		"52": null,
		"53": null,
		"54": never,
		"55": test_types_MyEmptyInput,
		"56": string,
		"57": [string],
		"58": test_types_ExtraBracketsInTupleVariant,
		"59": test_types_ExtraBracketsInUnnamedStruct,
		"5a": test_types_MyEnum[],
		"5b": test_types_InlineTuple,
		"5c": test_types_InlineTuple2,
		"5d": string,
		"5e": string,
		"5f": test_types_SkippedFieldWithinVariant,
		"60": test_types_KebabCase,
		"61": string[],
		"62": test_types_Issue281,
		"63": test_types_RenameWithWeirdCharsField,
		"64": test_types_RenameWithWeirdCharsVariant,
		"65": test_types_Issue374,
		"66": test_types_type_type_Type,
	};
════════════════════════════════════════
